# xlsform-ai

./: .gitignore  AGENT_XLSFORM_CAPABILITY_AUDIT.md  CHANGELOG_v0.5.0.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  test_template.py  verify_package.py
scripts/bash/: install.sh
scripts/powershell/: install.ps1
src/xlsform_ai/: __init__.py  agents.py  cli.py  complexity.py  config.py  display.py  templates.py
src/xlsform_ai/templates/base/: package.json
src/xlsform_ai/templates/base/.claude/: CLAUDE.md
src/xlsform_ai/templates/base/.claude/commands/: xlsform-add.md  xlsform-import.md  xlsform-move.md  xlsform-remove.md  xlsform-revert.md  xlsform-translate.md  xlsform-update.md  xlsform-validate.md
src/xlsform_ai/templates/base/.claude/skills/xlsform-core/: SKILL.md
src/xlsform_ai/templates/base/.claude/skills/xlsform-core/assets/: xlsform-template.xlsx
src/xlsform_ai/templates/base/.claude/skills/xlsform-core/references/: common-patterns.md  settings-sheet.md  syntax-guide.md  validation-rules.md
src/xlsform_ai/templates/base/scripts/: activity_log_template.html  add_metadata.py  add_questions.py  author_utils.py  choice_optimizer.py  cleanup.py  config.py  constraint_generator.py  display.py  form_duration_calculator.py  form_history.py  form_structure.py  history_manager.py  import_summary.py  log_activity.py  other_specify_handler.py  parse_docx.py  parse_pdf.py  parse_xlsx.py  question_type_analyzer.py  settings_status.py  settings_utils.py  translate_form.py  update_settings.py  validate_form.py
src/xlsform_ai/templates/base/scripts/knowledge_base/: __init__.py  best_practices_kb.py  embedder.py  rag_engine.py  retriever.py
src/xlsform_ai/templates/base/scripts/knowledge_base/data/: constraint_rules.md  dime_style_guide.md  multilingual_translation.md  nested_repeats.md  odk_best_practices.md  question_type_patterns.md  random_sampling.md  settings_sheet.md  use_cases.md
src/xlsform_ai/templates/base/shared/: AGENT_MEMORY_TEMPLATE.md  CLAUDE.md
src/xlsform_ai/templates/base/shared/commands/: translation-agent.md  xlsform-add.md  xlsform-import.md  xlsform-move.md  xlsform-remove.md  xlsform-revert.md  xlsform-translate.md  xlsform-update.md  xlsform-validate.md
src/xlsform_ai/templates/base/shared/skills/activity-logging/: SKILL.md
src/xlsform_ai/templates/base/shared/skills/sub-agents/export-agent/: SKILL.md
src/xlsform_ai/templates/base/shared/skills/translation-agent/: SKILL.md
src/xlsform_ai/templates/base/shared/skills/xlsform-core/: SKILL.md
templates/base/.claude/: CLAUDE.md
templates/base/.claude/commands/: xlsform-import.md  xlsform-validate.md
templates/base/scripts/: validate_form.py
test_multi_agent_project/: activity_log.html  package.json  xlsform-ai.json
test_multi_agent_project/.claude/: CLAUDE.md
test_multi_agent_project/.claude/commands/: xlsform-add.md  xlsform-move.md
test_multi_agent_project/.claude/skills/xlsform-core/references/: question-types.md
test_multi_agent_project/.copilot/instructions/: xlsform-import.md
test_multi_agent_project/.copilot/skills/sub-agents/export-agent/: SKILL.md
test_multi_agent_project/.copilot/skills/sub-agents/import-agent/: SKILL.md
test_multi_agent_project/.copilot/skills/sub-agents/validation-agent/: SKILL.md
test_multi_agent_project/.cursor/skills/xlsform-core/references/: syntax-guide.md
test_multi_agent_project/scripts/: __init__.py  add_questions.py  display.py  form_structure.py  parse_docx.py  validate_form.py
(+10 files in other folders)
