[project]
name = "xlsform-ai-cli"
version = "0.1.0"
description = "AI-powered XLSForm creation tool with Claude Code integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "XLSForm AI Contributors" }
]
keywords = ["xlsform", "odk", "survey", "cli", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
xlsform-ai = "xlsform_ai.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/xlsform-ai"
Repository = "https://github.com/yourusername/xlsform-ai"
Issues = "https://github.com/yourusername/xlsform-ai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xlsform_ai"]
